--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["yeastplume"]
 
 [workspace]
-members = ["cuckoo_miner","cuckoo_sys"]
+members = ["cuckoo_miner","cuckoo-sys"]
 
 [dependencies]
 cuckoo_miner = { path = "cuckoo_miner" }
+cuckoo-sys = { path = "cuckoo-sys" }
 
 env_logger="^0.3.5"
 log = "^0.3"
