--- a/cuckoo-sys/dylibs/common/Cargo.toml
+++ b/cuckoo-sys/dylibs/common/Cargo.toml
@@ -1,25 +1,16 @@
 [package]
-name = "cuckoo_10"
+name = "common"
 version = "0.1.0"
 authors = ["yeastplume"]
 license = "MIT/Apache-2.0/BSD-3-Clause"
-description = "Cuckoo 10 Build"
+description = "Cuckoo Common Build Tools"
 readme = "README.md"
-workspace = "../../../"
-
-build = "build.rs"
-
-[lib]
-name = "cuckoo_10"
-crate-type = ["dylib"]
 
 [dependencies]
-libc = "0.2.24"
-libloading = "0.4.0"
+gcc = "0.3.51"
 
 [dev-dependencies]
 const-cstr = "0.2"
 
 [build-dependencies]
-gcc = "0.3.51"
 make-cmd = "0.1"
