--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["yeastplume"]
 
 [workspace]
-members = ["cuckoo-miner","cuckoo-sys"]
+members = ["cuckoo-miner","cuckoo-sys", "cuckoo-config"]
 
 [dependencies]
 cuckoo_miner = { path = "cuckoo-miner" }
+cuckoo_config = { path = "cuckoo-config" }
 
 env_logger="^0.3.5"
 log = "^0.3"
