adding detection of plugins from plugin directory, added description querying function to plugin interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ authors = ["yeastplume"]
 members = ["cuckoo-miner","cuckoo-sys", "cuckoo-config"]
 
 [dependencies]
-cuckoo_miner = { path = "cuckoo-miner" }
-cuckoo_config = { path = "cuckoo-config" }
+cuckoo_miner = { path = "cuckoo-miner", version="0.1.0" }
+cuckoo_config = { path = "cuckoo-config", version="0.1.0" }
 
 env_logger="^0.3.5"
 log = "^0.3"
