--- a/cuckoo-sys/Cargo.toml
+++ b/cuckoo-sys/Cargo.toml
@@ -15,6 +15,9 @@ static = []
 libc = "0.2.24"
 libloading = "0.4.0"
 lazy_static = "0.2.8"
+glob = "0.2.11"
+log = "^0.3"
+
 cuckoo_config = { path = "../cuckoo-config" }
 
 cuckoo_basic_12 = { path = "dylibs/cuckoo_basic_12" }
