Separated conerns into a separate plugin manager and miner, made the calling workflow a bit more logical. Added a test of cuckoo 12

--- a/cuckoo-miner/Cargo.toml
+++ b/cuckoo-miner/Cargo.toml
@@ -10,5 +10,8 @@ log = "^0.3"
 cuckoo-sys = { path = "../cuckoo-sys" }
 cuckoo_config = { path = "../cuckoo-config", version="0.1.0" }
 
+[dev-dependencies]
+rust-crypto = "0.2.36"
+
 
 
