--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cuckoo_miner"
+name = "miner"
 version = "0.1.0"
 authors = ["yeastplume"]
 workspace = ".."
@@ -8,7 +8,7 @@ workspace = ".."
 env_logger="^0.3.5"
 log = "^0.3"
 cuckoo-sys = { path = "../cuckoo-sys" }
-cuckoo_config = { path = "../cuckoo-config", version="0.1.0" }
+config = { path = "../config", version="0.1.0" }
 
 [dev-dependencies]
 rust-crypto = "0.2.36"
