--- a/cuckoo-sys/Cargo.toml
+++ b/cuckoo-sys/Cargo.toml
@@ -20,8 +20,9 @@ log = "^0.3"
 
 config = { path = "../config" }
 
-cuckoo_basic_12 = { path = "dylibs/cuckoo_basic_12" }
-cuckoo_basic_30 = { path = "dylibs/cuckoo_basic_30" }
+cuckoo_simple_12 = { path = "dylibs/cuckoo_simple_12" }
+cuckoo_edgetrim_12 = { path = "dylibs/cuckoo_edgetrim_12" }
+cuckoo_edgetrim_30 = { path = "dylibs/cuckoo_edgetrim_30" }
 #cuckoo_tomato_12 = { path = "dylibs/cuckoo_tomato_12" }
 #cuckoo_tomato_30 = { path = "dylibs/cuckoo_tomato_30" }
 #cuckoo_mean_28 = { path = "dylibs/cuckoo_mean_28" }
