--- a/cuckoo-sys/dylibs/cuckoo_simple_12/Cargo.toml
+++ b/cuckoo-sys/dylibs/cuckoo_simple_12/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "cuckoo_basic_30"
+name = "cuckoo_simple_12"
 version = "0.1.0"
 authors = ["yeastplume"]
 license = "MIT/Apache-2.0/BSD-3-Clause"
-description = "Cuckoo 30 Build"
+description = "Cuckoo Simple 12 Build"
 
 build = "build.rs"
 
