--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -7,6 +7,7 @@ workspace = ".."
 [dependencies]
 env_logger="^0.3.5"
 log = "^0.3"
+regex = "0.1.80"
 cuckoo-sys = { path = "../cuckoo-sys" }
 config = { path = "../config", version="0.1.0" }
 
