--- a/cuckoo-sys/dylibs/common/Cargo.toml
+++ b/cuckoo-sys/dylibs/common/Cargo.toml
@@ -3,7 +3,7 @@ name = "common"
 version = "0.1.0"
 authors = ["yeastplume"]
 license = "MIT/Apache-2.0/BSD-3-Clause"
-description = "Cuckoo Common Build Tools"
+description = "Cuckoo Mining Plugin dll common build tools"
 readme = "README.md"
 
 [dependencies]
