--- a/cuckoo-sys/dylibs/cuckoo_tomato_12/Cargo.toml
+++ b/cuckoo-sys/dylibs/cuckoo_tomato_12/Cargo.toml
@@ -3,7 +3,7 @@ name = "cuckoo_tomato_12"
 version = "0.1.0"
 authors = ["yeastplume"]
 license = "MIT/Apache-2.0/BSD-3-Clause"
-description = "Cuckoo Tomato 12 Build"
+description = "Plugin implementing Cuckoo Cycle TMTO Algorithm, Cuckoo size 12"
 
 build = "build.rs"
 
