--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 authors = ["yeastplume"]
 
 [workspace]
-members = ["miner", "config", "manager", "cuckoo-sys"]
+members = ["miner", "error", "manager", "cuckoo-sys"]
 
 [dependencies]
 miner = { path = "miner", version="0.1.0" }
-config = { path = "config", version="0.1.0" }
+error = { path = "error", version="0.1.0" }
 manager = { path = "manager", version="0.1.0" }
 
 env_logger="^0.3.5"
