--- a/cuckoo-sys/Cargo.toml
+++ b/cuckoo-sys/Cargo.toml
@@ -7,18 +7,15 @@ description = "Rust bindings to John Tromp's Cuckoo Cycle Implementations"
 readme = "README.md"
 workspace = ".."
 
-[features]
-default = [ "static" ]
-static = []
-
 [dependencies]
 libc = "0.2.24"
 libloading = "0.4.0"
 lazy_static = "0.2.8"
-glob = "0.2.11"
 log = "^0.3"
 
-config = { path = "../config" }
+error = { path = "../error", version="0.1.0" }
+
+#Plugins
 
 #cuckoo_simple_12 = { path = "plugins/cuckoo_simple_12" }
 cuckoo_edgetrim_12 = { path = "plugins/cuckoo_edgetrim_12" }
