--- a/manager/Cargo.toml
+++ b/manager/Cargo.toml
@@ -8,8 +8,10 @@ workspace = ".."
 env_logger="^0.3.5"
 log = "^0.3"
 regex = "0.1.80"
+glob = "0.2.11"
+
 cuckoo-sys = { path = "../cuckoo-sys" }
-config = { path = "../config", version="0.1.0" }
+error = { path = "../error", version="0.1.0" }
 
 
 
