--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -9,7 +9,7 @@ env_logger="^0.3.5"
 log = "^0.3"
 regex = "0.1.80"
 cuckoo-sys = { path = "../cuckoo-sys" }
-config = { path = "../config", version="0.1.0" }
+error = { path = "../error", version="0.1.0" }
 
 [dev-dependencies]
 rust-crypto = "0.2.36"
