--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ miner = { path = "miner", version="0.1.0" }
 error = { path = "error", version="0.1.0" }
 manager = { path = "manager", version="0.1.0" }
 
+[dev-dependencies]
+rust-crypto = "0.2.36"
+env_logger="^0.3.5"
+
 [[bin]]
 name = "cuckoo_miner_test"
 path = "src/main.rs"
