--- a/cuckoo-sys/Cargo.toml
+++ b/cuckoo-sys/Cargo.toml
@@ -17,16 +17,22 @@ error = { path = "../error", version="0.1.0" }
 
 #Plugins
 
-#cuckoo_simple_12 = { path = "plugins/cuckoo_simple_16" }
+cuckoo_simple_16 = { path = "plugins/cuckoo_simple_16" }
+cuckoo_simple_20 = { path = "plugins/cuckoo_simple_20" }
+cuckoo_simple_25 = { path = "plugins/cuckoo_simple_25" }
+cuckoo_simple_28 = { path = "plugins/cuckoo_simple_28" }
+cuckoo_simple_30 = { path = "plugins/cuckoo_simple_30" }
 cuckoo_edgetrim_16 = { path = "plugins/cuckoo_edgetrim_16" }
 cuckoo_edgetrim_20 = { path = "plugins/cuckoo_edgetrim_20" }
 cuckoo_edgetrim_25 = { path = "plugins/cuckoo_edgetrim_25" }
 cuckoo_edgetrim_28 = { path = "plugins/cuckoo_edgetrim_28" }
 cuckoo_edgetrim_30 = { path = "plugins/cuckoo_edgetrim_30" }
+#Mean miner is going to take some work to integrate
+#cuckoo_mean_25 = { path = "plugins/cuckoo_mean_25" }
+#cuckoo_mean_28 = { path = "plugins/cuckoo_mean_28" }
+#And tomato miner doesn't compile ATM
 #cuckoo_tomato_12 = { path = "plugins/cuckoo_tomato_12" }
 #cuckoo_tomato_30 = { path = "plugins/cuckoo_tomato_30" }
-#cuckoo_mean_28 = { path = "plugins/cuckoo_mean_28" }
-#cuckoo_mean_30 = { path = "plugins/cuckoo_mean_30" }
 
 
 [dev-dependencies]
