--- a/cuckoo-sys/plugins/cuckoo_simple_28/Cargo.toml
+++ b/cuckoo-sys/plugins/cuckoo_simple_28/Cargo.toml
@@ -3,7 +3,7 @@ name = "cuckoo_simple_28"
 version = "0.1.0"
 authors = ["yeastplume"]
 license = "MIT/Apache-2.0/BSD-3-Clause"
-description = "Plugin implementing Cuckoo Cycle Mean Algorithm, Cuckoo size 28"
+description = "Plugin implementing Cuckoo Cycle Simple Algorithm, Cuckoo size 28"
 
 build = "build.rs"
 
