--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -9,6 +9,7 @@ env_logger="^0.3.5"
 log = "^0.3"
 rand = "^0.3"
 byteorder = "^0.5"
+num-bigint = "^0.1.35"
 tiny-keccak = "1.1"
 regex = "0.1.80"
 cuckoo-sys = { path = "../cuckoo-sys" }
