--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -10,7 +10,7 @@ log = "^0.3"
 rand = "^0.3"
 byteorder = "^0.5"
 num-bigint = "^0.1.35"
-tiny-keccak = "1.1"
+blake2-rfc = "~0.2.17"
 regex = "0.1.80"
 cuckoo-sys = { path = "../cuckoo-sys" }
 error = { path = "../error", version="0.1.0" }
