--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ manager = { path = "manager", version="0.1.0" }
 [dev-dependencies]
 rust-crypto = "0.2.36"
 env_logger="^0.3.5"
+time = "^0.1"
 
 [[bin]]
 name = "cuckoo_miner_test"
