--- a/manager/Cargo.toml
+++ b/manager/Cargo.toml
@@ -7,7 +7,7 @@ workspace = ".."
 [dependencies]
 env_logger="^0.3.5"
 log = "^0.3"
-regex = "0.1.80"
+regex = "~0.2.2"
 glob = "0.2.11"
 serde = "~1.0.8"
 serde_derive = "~1.0.8"
