--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ error = { path = "error", version="0.1.0" }
 manager = { path = "manager", version="0.1.0" }
 
 time = "^0.1"
+env_logger="^0.3.5"
+log = "^0.3"
 
 [dev-dependencies]
 rust-crypto = "0.2.36"
-env_logger="^0.3.5"
 
 
 [[bin]]
