--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -14,6 +14,10 @@ blake2-rfc = "~0.2.17"
 regex = "~0.2.2"
 cuckoo-sys = { path = "../cuckoo-sys" }
 error = { path = "../error", version="0.1.0" }
+serde = "~1.0.8"
+serde_derive = "~1.0.8"
+serde_json = "~1.0.2"
+
 
 
 
