fix up OSX cmake build

--- a/cuckoo-sys/plugins/CMakeLists.txt
+++ b/cuckoo-sys/plugins/CMakeLists.txt
@@ -8,7 +8,7 @@ set (OPT "-O3")
 set (DOPT "-DPREFETCH")
 
 set (FLAGS "-Wall -Wno-format -Wno-deprecated-declarations -D_POSIX_C_SOURCE=200112L ${OPT} ${DOPT} -I. ${CPPFLAGS} -pthread")
-set (GPP_FLAGS "-march=native -m64 -std=c++11 ${FLAGS}")
+set (GPP_FLAGS "-march=native -m64 ${FLAGS}")
 set (CFLAGS "-Wall -Wno-format -fomit-frame-pointer ${OPT}")
 set (GCC_FLAGS "-m64 -std=gnu11 ${CFLAGS}")
 
