grin integration, renaming plugins to 'lean' and 'mean'

--- a/cuckoo-sys/plugins/CMakeLists.txt
+++ b/cuckoo-sys/plugins/CMakeLists.txt
@@ -16,50 +16,39 @@ set (GCC_FLAGS "-m64 -std=gnu11 ${CFLAGS}")
 set (BLAKE_2B "cuckoo/src/blake2b-ref.c")
 
 #simple miner sources
-set (SIMPLE_MINER_SOURCES cuckoo/src/simple_miner.cpp ${BLAKE_2B})
+#set (SIMPLE_MINER_SOURCES cuckoo/src/simple_miner.cpp ${BLAKE_2B})
 
-#cuckoo_miner (edgetrim) sources
+#cuckoo_miner (lean_cpu) sources
 set (CUCKOO_MINER_SOURCES cuckoo/src/siphash.h cuckoo/src/cuckoo.h cuckoo/src/cuckoo_miner.hpp cuckoo/src/cuckoo_miner.cpp ${BLAKE_2B})
 
-#matrix_miner sources
+#matrix_miner sources (mean_cpu)
 set (MATRIX_MINER_SOURCES cuckoo/src/siphash.h cuckoo/src/cuckoo.h cuckoo/src/matrix_miner.hpp cuckoo/src/matrix_miner.cpp ${BLAKE_2B})
 
-#tomato_miner sources
-set (TOMATO_MINER_SOURCES cuckoo/src/siphash.h cuckoo/src/cuckoo.h cuckoo/src/tomato_miner.h cuckoo/src/tomato_miner.cpp ${BLAKE_2B} )
-
-#cuda_miner sources
+#cuda_miner source (lean_cuda)
 set (CUDA_MINER_SOURCES cuckoo/src/cuda_miner.cu ${BLAKE_2B} )
 
 #cuckoo simple miner targets
-foreach(CUCKOO_SIZE 12 16 20 25 28 30)
-    add_library(cuckoo_simple_${CUCKOO_SIZE} SHARED ${SIMPLE_MINER_SOURCES})
+#foreach(CUCKOO_SIZE 12 16 20 25 28 30)
+#   add_library(cuckoo_simple_${CUCKOO_SIZE} SHARED ${SIMPLE_MINER_SOURCES})
+    #get edgebits
+#   math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
+#   set_target_properties(cuckoo_simple_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DEDGEBITS=${EDGEBITS}" )
+#endforeach(CUCKOO_SIZE)
+
+###cuckoo edgetrim (lean_cpu) miner targets
+foreach(CUCKOO_SIZE 16 30)
+    add_library(cuckoo_lean_cpu_${CUCKOO_SIZE} SHARED ${CUCKOO_MINER_SOURCES})
     #get edgebits
     math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-    set_target_properties(cuckoo_simple_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DEDGEBITS=${EDGEBITS}" )
+    set_target_properties(cuckoo_lean_cpu_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DATOMIC -DEDGEBITS=${EDGEBITS}" )
 endforeach(CUCKOO_SIZE)
 
-###cuckoo edgetrim miner targets
-foreach(CUCKOO_SIZE 16 20 25 28 30)
-    add_library(cuckoo_edgetrim_${CUCKOO_SIZE} SHARED ${CUCKOO_MINER_SOURCES})
+#matrix miner (mean_cpu) targets
+foreach(CUCKOO_SIZE 30)
+    add_library(cuckoo_mean_cpu_${CUCKOO_SIZE} SHARED ${MATRIX_MINER_SOURCES})
     #get edgebits
     math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-    set_target_properties(cuckoo_edgetrim_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DATOMIC -DEDGEBITS=${EDGEBITS}" )
-endforeach(CUCKOO_SIZE)
-
-#matrix miner targets
-foreach(CUCKOO_SIZE 26 28 30)
-    add_library(cuckoo_matrix_${CUCKOO_SIZE} SHARED ${MATRIX_MINER_SOURCES})
-    #get edgebits
-    math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-    set_target_properties(cuckoo_matrix_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -mavx2 -DNSIPHASH=8 -DEDGEBITS=${EDGEBITS}" )
-endforeach(CUCKOO_SIZE)
-
-##cuckoo tomato miner targets
-foreach(CUCKOO_SIZE 16 20 25 28 30)
-    add_library(cuckoo_tomato_${CUCKOO_SIZE} SHARED ${TOMATO_MINER_SOURCES})
-    #get edgebits
-    math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-    set_target_properties(cuckoo_tomato_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -DATOMIC -DEDGEBITS=${EDGEBITS}" )
+    set_target_properties(cuckoo_mean_cpu_${CUCKOO_SIZE} PROPERTIES COMPILE_FLAGS "${GPP_FLAGS} -mavx2 -DNSIPHASH=8 -DEDGEBITS=${EDGEBITS}" )
 endforeach(CUCKOO_SIZE)
 
 # Cuda
@@ -71,10 +60,10 @@ if(WITH_CUDA)
 	set (CUDA_HOST_COMPILER "/usr/bin/gcc-5")
 	set (CUDA_PROPAGATE_HOST_FLAGS ON)
         ##cuckoo tomato miner targets
-        foreach(CUCKOO_SIZE 16 20 25 28 30)
+        foreach(CUCKOO_SIZE 30)
             #get edgebits
             math (EXPR EDGEBITS ${CUCKOO_SIZE}-1)
-	    cuda_add_library(cuckoo_cuda_${CUCKOO_SIZE} SHARED ${CUDA_MINER_SOURCES} OPTIONS "-lssl -DEDGEBITS=${EDGEBITS}")
+	    cuda_add_library(cuckoo_lean_cuda_${CUCKOO_SIZE} SHARED ${CUDA_MINER_SOURCES} OPTIONS "-lssl -DEDGEBITS=${EDGEBITS}")
         endforeach(CUCKOO_SIZE)
     endif(CUDA_FOUND)
 endif(WITH_CUDA)
