--- a/miner/Cargo.toml
+++ b/miner/Cargo.toml
@@ -18,6 +18,6 @@ serde = "~1.0.8"
 serde_derive = "~1.0.8"
 serde_json = "~1.0.2"
 
-
-
-
+[dev_dependencies]
+manager = { path = "../manager" }
+time = "^0.1"
