--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,9 @@ addons:
 env:
   global:
     - RUST_BACKTRACE="1"
-    - RUST_TEST_THREADS="1"
   matrix:
     - TEST_DIR=.
 
 script: 
-- cd $TEST_DIR && cargo test --verbose on_commit
+- cd $TEST_DIR && RUST_TEST_THREADS=1 cargo test --verbose on_commit
 - cd $TEST_DIR && cargo test --doc 
